# rk2

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  main.cpp
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
include/: MessageHandler.h
include/MessageHandler/: DefaultState.h  MessageHandler.h  SessionState.h  State.h
include/state_pattern/: default_state.h  message_handler.h  session_state.h
src/: CMakeLists.txt  DefaultState.cpp  MessageHandler.cpp  SessionState.cpp  default_state.cpp  message_handler.cpp  session_state.cpp
tests/: CMakeLists.txt  TestDefaultState.cpp  TestMessageHandler.cpp  test_default_state.cpp  test_messagehandler.cpp  test_session_state.cpp
